#1230: Modified GetWorkflowEntranceSecurityRoles UC to extend BasePaginatedMultipleEntitiesCommand