@@ -29,35 +29,33 @@ import com.echothree.model.data.workflow.server.entity.WorkflowEntranceSecurityR
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class GetWorkflowEntranceSecurityRolesCommand
-        extends BaseMultipleEntitiesCommand<WorkflowEntranceSecurityRole, GetWorkflowEntranceSecurityRolesForm> {
-    
+        extends BasePaginatedMultipleEntitiesCommand<WorkflowEntranceSecurityRole, GetWorkflowEntranceSecurityRolesForm> {
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.WorkflowEntrance.name(), SecurityRoles.SecurityRole.name())
-                        )))
-                )));
+                ))
+        ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("WorkflowName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("WorkflowEntranceName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("PartyTypeName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of GetWorkflowEntranceSecurityRolesCommand */
@@ -68,14 +66,26 @@ public class GetWorkflowEntranceSecurityRolesCommand
     WorkflowEntrancePartyType workflowEntrancePartyType;
 
     @Override
-    protected Collection<WorkflowEntranceSecurityRole> getEntities() {
+    protected void handleForm() {
         var workflowName = form.getWorkflowName();
         var workflowEntranceName = form.getWorkflowEntranceName();
         var partyTypeName = form.getPartyTypeName();
-        Collection<WorkflowEntranceSecurityRole> workflowEntranceSecurityRoles = null;
 
         workflowEntrancePartyType = WorkflowEntranceLogic.getInstance().getWorkflowEntrancePartyTypeByName(this,
                 workflowName, workflowEntranceName, partyTypeName);
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        var workflowControl = Session.getModelController(WorkflowControl.class);
+
+        return hasExecutionErrors() ? null :
+                workflowControl.countWorkflowEntranceSecurityRolesByWorkflowEntrancePartyType(workflowEntrancePartyType);
+    }
+
+    @Override
+    protected Collection<WorkflowEntranceSecurityRole> getEntities() {
+        Collection<WorkflowEntranceSecurityRole> workflowEntranceSecurityRoles = null;
 
         if(!hasExecutionErrors()) {
             var workflowControl = Session.getModelController(WorkflowControl.class);
